# GSOC_Playmotion2_plugin_based_system

./: Contact_details.md  Example1.md  Example2.md  Example3.md  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_contoller/lib/my_robot_contoller/: draw_circle  pose_subscriber  test_node
install/my_robot_contoller/share/my_robot_contoller/: package.dsv  package.ps1  package.sh  package.xml
install/rqt_chat/share/rqt_chat/: package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugin.xml
install/rqt_chat/share/rqt_chat/resource/: chat.ui
install/tiago_arm_trajectory/lib/tiago_arm_trajectory/: send_trajectory
install/tiago_arm_trajectory/share/tiago_arm_trajectory/: package.bash  package.dsv  package.ps1  package.sh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/my_robot_contoller/lib/my_robot_contoller/: draw_circle  pose_subscriber  test node  test_node
ros2_ws/install/my_robot_contoller/share/my_robot_contoller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/rqt_chat/share/rqt_chat/: package.bash  package.dsv  package.ps1  package.sh  package.xml  plugin.xml
ros2_ws/install/rqt_chat/share/rqt_chat/resource/: chat.ui
ros2_ws/install/string_plugin_system/share/string_plugin_system/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/tiago_arm_trajectory/lib/tiago_arm_trajectory/: send_trajectory
ros2_ws/log/: latest_build  latest_list
(+13 files in other folders)
