<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_chat</name>
  <version>1.4.0</version>
  <description>A RQt chat interface compatible with ROS4HRI</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>Apache-2.0</license>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tts_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>hri_actions_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
